# aoapc-bac2nd

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/ch1/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp  exercise7.cpp  experiment1.cpp  program1.cpp  program15.cpp  program2.cpp  program3.cpp  program4.cpp  program7.cpp
src/ch10/Example_10-10_CowsAndCars/: Makefile  cows_and_cars.cpp
src/ch10/Example_10-11_ProbabilityGiven/: Makefile  probability_given.cpp
src/ch10/Example_10-1_ColossalFibonacciNumbers/: Makefile  colossal_fibonacci_numbers.cpp  in.txt  out.txt
src/ch10/Example_10-2_DisgruntledJudge/: Makefile  disgruntled_judge.cpp
src/ch10/Example_10-3_ChooseAndDivide/: Makefile  choose_and_divide.cpp  in.txt  out.txt
src/ch10/Example_10-4_MinimumSumLCM/: Makefile  minimum_sum_lcm.cpp  minimum_sum_lcm_1.cpp
src/ch10/Example_10-5_GCDXOR/: Makefile  gcd_xor.cpp  gcd_xor_1.cpp  in.txt
src/ch10/Example_10-7_SendATable/: Makefile  send_a_table.cpp
src/ch10/Example_10-8_Password/: Makefile  password.cpp
src/ch10/Example_10-9_Headshot/: Makefile  headshot.cpp  out.txt
src/ch10/NumberTheory/: division_expression.cpp  extend_gcd.cpp  mod.cpp
src/ch11/Example_11-1_CommonSubexpressionElimination/: Makefile  README.md  common_subexpression_elimination.cpp  common_subexpression_elimination_1.cpp  common_subexpression_elimination_2.cpp  in.txt  out.txt  solution.cpp
src/ch11/Example_11-2_SlimSpan/: Makefile  in.txt  out.txt  slim_span.cpp
src/ch11/Example_11-3_BuyOrBuild/: Makefile  buy_or_build.cpp  in.txt  out.txt
src/ch11/Example_11-4_CallingCircles/: Makefile  calling_circles.cpp  easy_in.txt  easy_out.txt  out.txt  solution.cpp  test_calling_circles.cpp  test_calling_circles.py
src/ch11/Example_11-5_Audiophobia/: Makefile  audiophobia.cpp
src/ch11/Example_11-6_BugFeature/: Makefile  bug_feature.cpp
src/ch11/ExpressionTree/: Makefile  expression_tree.cpp  in.txt
src/ch11/UnrootedTree2RootedTree/: Makefile  in.txt  out.txt  unrooted_tree_to_rooted_tree.cpp
src/ch2/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example6.in  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp  experiment2.cpp  program1.cpp
src/ch3/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example4.in  program1.cpp  program2.cpp  program3.cpp  program4.cpp
src/ch3/Exercise_3-12-FloatingPointNumbers/: Makefile  floating_point_numbers.cpp  floating_point_numbers_2.cpp  out.txt
src/ch3/example_3-1_TexQuotes/: Makefile  in.txt  out.txt  tex_quotes.cpp
src/ch3/example_3-2_WERTYU/: Makefile  in.txt  out.txt  wertyu.cpp
src/ch3/example_3-3_Palindromes/: Makefile  palindromes.cpp
src/ch3/example_3-4_MasterMindHints/: Makefile  in.txt  master_mind_hints.cpp
src/ch3/example_3-5_DigitGenerator/: Makefile  digit_generator.cpp  digit_generator_2.cpp  in.txt
src/ch3/example_3-6_CircularSequence/: Makefile  circular_sequence.cpp  in.txt
src/ch3/exercise_3-10_Box/: Makefile  box.cpp  in.txt  out.txt
src/ch3/exercise_3-11_Kickdown/: Makefile  in.txt  kickdown.cpp  out.txt
src/ch3/exercise_3-1_Score/: Makefile  score.cpp
src/ch3/exercise_3-2_MolarMass/: Makefile  molar_mass.cpp
src/ch3/exercise_3-3_DigitCounting/: Makefile  digit_counting.cpp
src/ch3/exercise_3-4_PeoridicStrings/: Makefile  in.txt  out.txt  peoridic_strings.cpp
src/ch3/exercise_3-5_Puzzle/: Makefile  in.txt  out.txt  puzzle.cpp
src/ch3/exercise_3-6_CrosswordAnswers/: Makefile  crossword_answers.cpp
src/ch3/exercise_3-7_DNAConsensusString/: Makefile  dna_consensus_string.cpp
src/ch3/exercise_3-8_RepeatingDecimals/: Makefile  repeating_decimals.cpp
src/ch3/exercise_3-9_AllinAll/: Makefile  all_in_all.cpp  in.txt  out.txt
src/ch4/Example_4-1_AncientCipher/: Makefile  ancient_cipher.cpp  in.txt
src/ch4/Example_4-2_HangmanJudge/: Makefile  hangman_judge.cpp  in.txt  out.txt
src/ch4/Example_4-3_TheDoleQueue/: Makefile  the_dole_queue.cpp
src/ch4/Example_4-5_SpreadsheetTracking/: Makefile  easy_in.txt  easy_out.txt  spreadsheet_tracking_1.cpp
src/ch4/Example_4-6_ATypicalHomework/: Makefile  a_typical_homework.cpp
src/ch4/Program_4-3_Prime/: prime.cpp
src/ch4/Program_4-5_Swap/: swap.cpp
src/ch4/Program_4-7_Sum/: sum.cpp
src/ch4/Program_4_10_Factorial/: factorial.cpp
src/ch4/program_4-1_CombinatorialNumber/: Makefile  combinatorial_number.cpp
src/ch5/Example_5-11_TheLetterCarriersRounds/: Makefile  out.txt  the_letter_carriers_rounds.cpp
src/ch5/Example_5-12_UrbanElevations/: Makefile  urban_elevations.cpp
src/ch5/Example_5-1_WhereIsTheMarble/: Makefile  in.txt  marble.cpp
src/ch5/Example_5-2_TheBlocksProblem/: Makefile  blocks.cpp
src/ch5/Example_5-3_AndysFirstDictionary/: Makefile  dictionary.cpp
src/ch5/Example_5-4_Ananagrams/: Makefile  ananagrams.cpp  ananagrams_2.cpp
src/ch5/Example_5-5_TheSetStackComputer/: Makefile  stack.cpp
src/ch5/Example_5-6_TeamQueue/: Makefile  team_queue.cpp  team_queue_2.cpp
src/ch5/Example_5-7_UglyNumbers/: 136.cpp  Makefile  ugly_numbers.cpp  ugly_numbers_1.cpp  ugly_numbers_2.cpp
src/ch5/Example_5-8_UnixLs/: Makefile  unix_ls.cpp
src/ch5/Example_5-9_Database/: Makefile  database.cpp  database_1.cpp
src/ch6/Example_6-10_TheFallingLeaves/: Makefile  the_falling_leaves.cpp
src/ch6/Example_6-11_Quadtrees/: Makefile  quadtrees.cpp
src/ch6/Example_6-12_OilDeposits/: Makefile  oil_deposits.cpp
src/ch6/Example_6-13_AncientMessages/: Makefile  ancient_messages.cpp
src/ch6/Example_6-14_AbbottsRevenge/: Makefile  abbotts_revenge.cpp  bfs.cpp
src/ch6/Example_6-15_OrderingTasks/: Makefile  in.txt  ordering_tasks.cpp  out.txt
src/ch6/Example_6-16_PlayOnWords/: Makefile  in.txt  out.txt  play_on_words.cpp
src/ch6/Example_6-1_ConcurrencySimulator/: Makefile  concurrency_simulator.cpp
src/ch6/Example_6-2_Rails/: Makefile  rails.cpp  rails_2.cpp
(+139 files in other folders)
