add_executable(test_ch1_example1 example1.cpp)
target_link_libraries(test_ch1_example1 PRIVATE doctest::doctest)

add_executable(test_ch1_example2 example2.cpp)
target_link_libraries(test_ch1_example2 PRIVATE doctest::doctest)

add_executable(test_ch1_example3 example3.cpp)
target_link_libraries(test_ch1_example3 PRIVATE doctest::doctest)

add_executable(test_ch1_example4 example4.cpp)
target_link_libraries(test_ch1_example4 PRIVATE doctest::doctest)

add_executable(test_ch1_example7 example7.cpp)
target_link_libraries(test_ch1_example7 PRIVATE doctest::doctest)

add_executable(test_ch1_example15 example15.cpp)
target_link_libraries(test_ch1_example15 PRIVATE doctest::doctest)

add_executable(test_ch1_exercise1 exercise1.cpp)
target_link_libraries(test_ch1_exercise1 PRIVATE doctest::doctest)

add_executable(test_ch1_exercise2 exercise2.cpp)
target_link_libraries(test_ch1_exercise2 PRIVATE doctest::doctest)

add_executable(test_ch1_exercise3 exercise3.cpp)
target_link_libraries(test_ch1_exercise3 PRIVATE doctest::doctest)

add_executable(test_ch1_exercise4 exercise4.cpp)
target_link_libraries(test_ch1_exercise4 PRIVATE doctest::doctest)

add_executable(test_ch1_exercise5 exercise5.cpp)
target_link_libraries(test_ch1_exercise5 PRIVATE doctest::doctest)

add_executable(test_ch1_experiment1 experiment1.cpp)
target_link_libraries(test_ch1_experiment1 PRIVATE doctest::doctest)
