add_executable(test_ch2_program1 program1.cpp)
target_link_libraries(test_ch2_program1 PRIVATE doctest::doctest)

add_executable(test_ch2_example1 example1.cpp)
target_link_libraries(test_ch2_example1 PRIVATE doctest::doctest)

add_executable(test_ch2_example2 example2.cpp)
target_link_libraries(test_ch2_example2 PRIVATE doctest::doctest)

add_executable(test_ch2_example3 example3.cpp)
target_link_libraries(test_ch2_example3 PRIVATE doctest::doctest)

add_executable(test_ch2_example4 example4.cpp)
target_link_libraries(test_ch2_example4 PRIVATE doctest::doctest)

add_executable(test_ch2_example5 example5.cpp)
target_link_libraries(test_ch2_example5 PRIVATE doctest::doctest)

add_executable(test_ch2_example6 example6.cpp)
target_link_libraries(test_ch2_example6 PRIVATE doctest::doctest)

add_executable(test_ch2_exercise1 exercise1.cpp)
target_link_libraries(test_ch2_exercise1 PRIVATE doctest::doctest)

add_executable(test_ch2_exercise2 exercise2.cpp)
target_link_libraries(test_ch2_exercise2 PRIVATE doctest::doctest)

add_executable(test_ch2_exercise3 exercise3.cpp)
target_link_libraries(test_ch2_exercise3 PRIVATE doctest::doctest)

add_executable(test_ch2_exercise4 exercise4.cpp)
target_link_libraries(test_ch2_exercise4 PRIVATE doctest::doctest)

add_executable(test_ch2_exercise5 exercise5.cpp)
target_link_libraries(test_ch2_exercise5 PRIVATE doctest::doctest)

add_executable(test_ch2_exercise6 exercise6.cpp)
target_link_libraries(test_ch2_exercise6 PRIVATE doctest::doctest)

add_executable(test_ch2_experiment2 experiment2.cpp)
target_link_libraries(test_ch2_experiment2 PRIVATE doctest::doctest)